--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
         <h1>menambahkan file index.html</h1>
+        <h2>Nama: Steven Jovanca</h2>
+        <h2>Rombel: PPLG X-5</h2>
 </body>
 </html>
